<resources>
    <string name="app_name">Pick-C</string>
    <string name="api_key">AIzaSyBt7Y0WDy9nka0JrV_gZkLIt-zTRfbf_ZE</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_activity_title">Book Pick-C Truck</string>
    <string name="terms_conditions">I AGREE </string>
    <string name="terms_conditions_decline">DECLINE </string>
    <string-array name="selectAction">
        <item>Resend OTP</item>
        <item>Enter OTP Manually</item>
    </string-array>
    <string name="cancel">Cancel</string>
    <string name="title_activity_status">CCAvenuePhone</string>
    <string name="html_terms_conditions_text_view">

    </string>
    <string name="nointernet">Please connect to network</string>
    <string name="login">LOGIN</string>
    <string name="pickc">pickc</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="help">Help</string>
    <string name="title_activity_maps">Map</string>
    <string name="unable_process">Unable to process the request. Try again!</string>
    <string name="src_loc_selected">Pickup location is selected</string>
    <string name="select_drop_loc">Please select drop location</string>
    <string name="selecting_loading_option">Please select loading unloading options and vehicle type</string>
    <string name="already_in_trip">You are already in trip</string>
    <string name="enter_old_pwd">Please enter old password</string>
    <string name="enter_new_pwd">Please enter new password</string>
    <string name="min_six_let">Password must be more than 8 characters</string>
    <string name="max_len_20">Password must be below 20 characters</string>
    <string name="enter_strong_pwd">Enter strong password</string>
    <string name="pwd_conditions">Password must contain 1 uppercase, 1 lowercase, 1 special character and number</string>
    <string name="enter_renter_pwd">Please re-enter new password</string>
    <string name="not_matched">New password and re-enter password are not matched</string>
    <string name="try_again">Server busy try again</string>
    <string name="update_pwd">Updating your password</string>
    <string name="pwd_changed">Password changed successfully</string>
    <string name="rating_completed">Rating completed successfully</string>
    <string name="saving_user_rating">Saving user rating</string>
    <string name="zero_rating">Driver Rating : 0</string>
    <string name="saved_driver_rating">Saved driver rating successfully</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="valid_email">Enter valid email</string>
    <string name="sent_msg_pickc">Sent message to Pick-C mail</string>
    <string name="enter_valid_Phone">Please enter 10 digit phone no.</string>
    <string name="sending_mail">Sending invoice details to your email</string>
    <string name="invoice_sent_mail">Invoice details are sent to your mail!</string>
    <string name="not_avalinle">Inovice details are not available</string>
    <string name="loading_charges">Loading charges</string>
    <string name="unloading_charges">UnLoading charges</string>
    <string name="loading_unloading_charges"><![CDATA[Loading & UnLoading charges]]></string>
    <string name="driver_rating">Driver rating is not available</string>
    <string name="select_cargo">Select a cargo type and enter weight in kilograms</string>
    <string name="lstatus">Selected: Loading services</string>
    <string name="ulstatus">Selected: Un Loading services</string>
    <string name="lulsttatus"><![CDATA[Selected: Loading & Un Loading services]]></string>
    <string name="none">Selected: None</string>
    <string name="no_internet">No internet connection</string>
    <string name="wif_dat_disabled"><![CDATA[Wifi & Data both are disabled. Please enable any one]]></string>
    <string name="enable_wifi">Enable wifi</string>
    <string name="refresh">Refresh</string>
    <string name="enable_data">Enable data</string>
    <string name="not_verfy">Phone number is not verified try again</string>
    <string name="please_wait">Please wait...</string>
    <string name="verify_number">Verifying phone number</string>
    <string name="exit_confirmation">Exit confirmation</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit from the Pick-C app?</string>
    <string name="do_you_want_to_logout_from_the_application">Do you want to logout from the Pick-C app?</string>
    <string name="logout_confirmation">Logout confirmation</string>
    <string name="enter_correct_Phone_number_pwd">Enter correct username and password</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_phone_number">Enter the phone number</string>
    <string name="verify_your_details">Verifying your credentials</string>
    <string name="enter_10_digit_phone_number">Please enter 10 digit phone number</string>
    <string name="login_successfully">Logged in successfully</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="pass_min_8">Password must be more than 8 characters</string>
    <string name="password_max_20">Password must be below 20 characters</string>
    <string name="password_conditions">Password must contain 1 uppercase, 1 lowercase,   1 special character and 1 number</string>
    <string name="pwds_not_matched">Password and Re-enter password are not matched</string>
    <string name="validate_otp">Validating OTP</string>
    <string name="server_busy">Server busy.Please try again after some time.</string>
    <string name="enter_4_digit_number">Enter otp</string>
    <string name="phone_number_not_start_with_0">Phone number should not start with 0</string>
    <string name="update">Updating password</string>
    <string name="pwd_updated_successfully">Password updated successfully</string>
    <string name="payment_details_not_available">Payment details are not available</string>
    <string name="validate_pwd">Validating your password</string>
    <string name="enter_subject">Enter subject</string>
    <string name="enter_query">Enter query</string>
    <string name="message_sent_succefully">Sent message to Pick-C mail successfully</string>
    <string name="message_sent_failed">Sent message to Pick-C mail failed</string>
    <string name="driver_rating_dd">Driver Rating : %d</string>
    <string name="is_from_rating">isFromRating</string>
    <string name="access_code">AVJX78FE15BT74XJTB</string>
    <string name="pwd_not_updated">Password is not updated try again</string>
    <string name="rate_card_details_are_not_available">Rate card details are not available</string>
    <string name="merchant_id">129759</string>
    <string name="notify_driver">NOTIFY_DRIVER</string>
    <string name="select_pick_up">Select the pick up location</string>
    <string name="lock_pick_location">Lock the pick up location</string>
    <string name="select_drop_location">Select the drop location</string>
    <string name="lock_drop_location">Lock the drop location</string>
    <string name="pick_drop_not_same">Pick up and Drop locations should not be same</string>
    <string name="trucks_are_not_available">Trucks are not available</string>
    <string name="pick_up_arrived">Pick up arrived</string>
    <string name="pickup_arriving">Pick Up Arriving</string>
    <string name="pick_arrived">Pick up arrived</string>
    <string name="trip_started_driver">Trip started by driver</string>
    <string name="trip_completed_by_driver">Trip completed by driver</string>
    <string name="driver_reached_pick">Driver reached pick up location</string>
    <string name="reached_de">Driver reached delivery location</string>
    <string name="both_selected">Loading and UnLoading Selected</string>
    <string name="unloading_sel">UnLoading Selected</string>
    <string name="loading_sel">Loading Selected</string>
    <string name="cargo_types_loading">Please wait cargo types loading…</string>
    <string name="please_wait_proc_booking">Please wait processing your booking</string>
    <string name="proceed_for_booking">Now you can proceed for booking</string>
    <string name="time_les_than_current_time">Selected Time is less than current time</string>
    <string name="selec_reacson_to_cancel">Please select a reason to cancel</string>
    <string name="cargo_types_not_ava">Cargo types not available</string>
    <string name="boo_process">Booking processing</string>
    <string name="booking_not_processed">Booking is not processed   Try again</string>
    <string name="truck_book_success">Truck booked successfully</string>
    <string name="waiting_for_driver">Truck booked successfully. Waiting for driver confirmation</string>
    <string name="truck_schedule">Truck scheduled successfully</string>
    <string name="truck_booked">Truck Booked</string>
    <string name="truck_sc_with">Truck scheduled with</string>
    <string name="ok">OK</string>
    <string name="at">at</string>
    <string name="driver_will_arrive">Truck scheduled successfully. Driver will arrive at</string>
    <string name="please_sel_cargo">Please select at least one cargo type</string>
    <string name="please_confirm_booking">Please confirm the booking</string>
    <string name="enter_10_digi">Please enter valid 10 digit mobile No.</string>
    <string name="use_moble">Select use my mobile number or enter an alternative number</string>
    <string name="total">Total</string>
    <string name="tons_with">tons with</string>
    <string name="mat">materials.</string>
    <string name="wt_shouldnt_greater_than_2700">Weight shouldn\'t be greater than 2700 kgs</string>
    <string name="not_gt_1250">Weight shouldn\'t be greater than 1250 kgs</string>
    <string name="wt_not_gt_1030_kgs">Weight shouldn\'t be greater than 1030 kgs</string>
    <string name="wt_not_gt_700_kgs">Weight shouldn\'t be greater than 700 kgs</string>
    <string name="sel_ct">Select cargo type</string>
    <string name="sel_time">Select Time</string>
    <string name="sel_date">Select Date</string>
    <string name="getting_ur_loc">Getting your location. Please wait…</string>
    <string name="enable_gps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="now_proc_for_booking">Now you can proceed for booking</string>
    <string name="trucks_not_found_c_r">Trucks not found please select cancel or retry</string>
    <string name="time_limit_exceed">Time limit Exceeded</string>
    <string name="retry">Retry</string>
    <string name="high_demand">Currently trucks are not available at your pick up location. Due to high demand.  Do you want to retry…</string>
    <string name="your_booking_is_cancelled">Your booking is cancelled</string>
    <string name="now_u_can_proceed_for_nooking">Now you can proceed for the booking</string>
    <string name="lock_pick">Lock the pick up location</string>
    <string name="select_pick_pick">Select pick up location</string>
    <string name="loc_drop_loc">Select the drop location</string>
    <string name="sign_up">SIGN UP</string>
    <string name="otp_will_be_sent_to_this_mobile_number">OTP will be sent to this mobile number</string>
    <string name="no_bookings_yet">No bookings Yet</string>
    <string name="you_have_not_done_any_booking_yet_n_book_your_trip_today">You have not done any booking yet.   Book your trip today</string>
    <string name="pay_now">PAY NOW</string>
    <string name="_102_108">102,108</string>
    <string name="_101">101</string>
    <string name="fire_department">Fire Department</string>
    <string name="_100">100</string>
    <string name="police">Police</string>
    <string name="loading">Loading</string>
</resources>