<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prts.pickcustomer.emergency.EmergencyActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_120"
        android:alpha="1"
        android:background="@color/colorPrimary"
        android:src="@drawable/pick_c"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/background_image_clouds"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_154_dip"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/height_160"
        android:adjustViewBounds="true"
        android:alpha="0.2"
        android:scaleType="matrix" />

    <com.prts.pickcustomer.customviews.PickCCustomTextVIew
        android:id="@+id/error_text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/background_image"
        android:background="@color/colorCancelledStatus"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="Error"
        android:textColor="#fff"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/sign_up_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/background_image"
        android:layout_toRightOf="@+id/background_image"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/appThemeBgColorDark"
            android:orientation="vertical"
            android:padding="@dimen/margin_10">

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="makeCallToPolice">

                    <ImageView
                        android:id="@+id/policeNoIV"
                        android:layout_width="@dimen/height_50"
                        android:layout_height="@dimen/height_50"
                        android:layout_alignBottom="@+id/policeNoTIL"
                        android:layout_alignTop="@+id/policeNoTIL"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/padding_8dp"
                        android:src="@drawable/police" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/policeNoTIL"
                        android:hint="@string/police"
                        android:paddingLeft="@dimen/margin_10"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/policeNoTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_toRightOf="@+id/policeNoIV"
                        android:textColorHint="@color/appThemeTextHintColor">

                        <com.prts.pickcustomer.customviews.PickCCustomTextVIew
                            android:id="@+id/police_number_txt_et"
                            style="@android:style/Widget.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_45"
                            android:background="@android:color/transparent"
                            android:enabled="false"
                            android:gravity="left|center"
                            android:hint="@string/_100"
                            android:paddingLeft="@dimen/margin_10"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"

                            />
                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="makeCallToFireDept">

                    <ImageView
                        android:id="@+id/fireNoIV"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignBottom="@+id/fireNoTIL"
                        android:layout_alignTop="@+id/fireNoTIL"
                        android:layout_centerVertical="true"
                        android:padding="8dp"
                        android:src="@drawable/firedepartment"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/fireNoTIL"
                        android:hint="@string/fire_department"
                        android:paddingLeft="@dimen/margin_10"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/fireNoTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_toRightOf="@+id/fireNoIV">

                        <com.prts.pickcustomer.customviews.PickCCustomTextVIew
                            android:id="@+id/fire_number_txt_et"
                            style="@android:style/Widget.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_45"
                            android:background="@android:color/transparent"
                            android:enabled="false"
                            android:gravity="left|center"
                            android:hint="@string/_101"
                            android:paddingLeft="@dimen/margin_10"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"

                            />
                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@android:color/darker_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="makeCallToAmbulance">

                    <ImageView
                        android:id="@+id/mobileNoIV"
                        android:layout_width="@dimen/height_50"
                        android:layout_height="@dimen/height_50"
                        android:layout_alignBottom="@+id/mobileNoTIL"
                        android:layout_alignTop="@+id/mobileNoTIL"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/padding_8dp"
                        android:src="@drawable/doctor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/mobileNoTIL"
                        android:hint="Ambulance"
                        android:paddingLeft="@dimen/margin_10"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textStyle="bold" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mobileNoTIL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_toRightOf="@+id/mobileNoIV">

                        <com.prts.pickcustomer.customviews.PickCCustomTextVIew
                            android:id="@+id/mobile_number_txt_et"
                            style="@android:style/Widget.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/height_45"
                            android:background="@android:color/transparent"
                            android:enabled="false"
                            android:gravity="left|center"
                            android:hint="@string/_102_108"
                            android:paddingLeft="@dimen/margin_10"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textStyle="bold"

                            />
                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
